namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-domestic-abuse-support-officers-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-domestic-abuse-support-officers-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation-webops"
    cloud-platform.justice.gov.uk/application: "hmpps domestic abuse support officers"
    cloud-platform.justice.gov.uk/owner: "hmpps daso: probation-webops@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-domestic-abuse-support-officers"
    cloud-platform.justice.gov.uk/team-name: "hmpps daso"
    cloud-platform.justice.gov.uk/review-after: ""
